# odkey

./: .clang-format  .cursorrules  .gitignore  ABOUT.md  CMakeLists.txt  LICENSE  ODKeyScript.md  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.adafruit_feather_esp32s2  sdkconfig.defaults
cad/2d/: OD.lac
cad/3d/: KeyBase-Bottom.3mf  KeyBase-Top.3mf  Keycap.3mf  ODKey v27.f3d  ODKey v29.f3d
image_sources/: OD.ai
include/: app.h  button.h  button_handler.h  http_api.h  http_server.h  http_service.h  log_buffer.h  mdns_service.h  nvs_config.h  nvs_odkey.h  odkeyscript_vm.h  program.h  program_storage.h  program_upload.h  usb_core.h  usb_keyboard.h  usb_keyboard_keys.h  usb_system_config.h  vm_task.h  wifi.h  wifi_config.h
odkey_tools/: .gitignore  README.md  __init__.py  hello.odk  pyproject.toml
odkey_tools/odkey/: __init__.py  cli.py
odkey_tools/odkey/config/: __init__.py  constants.py  odkey_config.py  odkey_config_http.py  odkey_config_usb.py
odkey_tools/odkey/odkeyscript/: __init__.py  odkeyscript_compiler.py  odkeyscript_disassembler.py  test_compiler.py
odkey_tools/odkey/uploader/: __init__.py  odkey_upload.py  test_upload.py
odkey_tools/scripts/: default.odk  is_this_okay.odk  mochi.odk  mochi_se.odk  open_channel.odk  open_slack.odk  sample.odk  shift_enter.odk
odkeyscript/: pyproject.toml  sample.odk
odkeyscript/odkeyscript/: __init__.py  odkeyscript_compiler.py  odkeyscript_disassembler.py  test_compiler.py
src/: app.c  buffer_utils.c  buffer_utils.h  button.c  button_handler.c  http_api.c  http_server.c  http_service.c  idf_component.yml  log_buffer.c  main.c  mdns_service.c  nvs_odkey.c  odkeyscript_vm.c  program.c  program_flash.c  program_flash.h  program_ram.c  program_ram.h  program_storage.c  program_upload.c  usb_core.c  usb_keyboard.c  usb_system_config.c  vm_task.c  wifi.c
